# gigasmol

./: .gitignore  README.md  pyproject.toml
examples/: agents.ipynb  code_agents.ipynb  structured_output.ipynb
src/gigasmol/: __init__.py  models.py
src/gigasmol/gigachat_api/: api_model.py
