[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gigasmol"
version = "0.0.1"
authors = [
    {name = "poteminr", email = "poteminr@gmail.com"},
]
description = "A lightweight wrapper for gigachat api model for seamless use with hf smolagents"
readme = "README.md"
requires-python = ">=3.10"


[project.urls]
"Homepage" = "https://github.com/poteminr/gigasmol"
"Bug Tracker" = "https://github.com/poteminr/gigasmol/issues"

[tool.setuptools]
package-dir = {"" = "src"}